--- a/app/styles/createdSnap.css
+++ b/app/styles/createdSnap.css
@@ -628,7 +628,7 @@
         inset: 0 !important;
         width: 100% !important;
         height: 100% !important;
-        object-fit: contain !important;
+        /* object-fit: contain !important; */
         padding: 0 !important;
         margin: 0 !important;
         border-radius: 20px;
