--- a/app/styles/createdSnap.css
+++ b/app/styles/createdSnap.css
@@ -613,6 +613,7 @@
     visibility: hidden;
     transition: all 0.3s ease;
     padding: 2.5rem;
+    border-radius: 20px;
 }
 
 .preview-modal-overlay.active {
@@ -637,12 +638,14 @@
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
+    border-radius: 20px;
 }
 
 .preview-modal.active {
     transform: translateY(0) scale(1);
     opacity: 1;
     visibility: visible;
+    border-radius: 20px;
 }
 
 .modal-image-container {
@@ -657,6 +660,7 @@
     border: 1px solid var(--border-color);
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.05);
     padding: 0;
+    border-radius: 16px;
 }
 
 /* Desktop styles for modal image */
@@ -721,6 +725,7 @@
     gap: 1rem;
     justify-content: center;
     padding: 0;
+    border-radius: 20px;
 }
 
 .modal-download {
@@ -830,7 +835,7 @@
         gap: 0;
         height: 100vh;
         width: 100vw;
-        border-radius: 0;
+        border-radius: 20px;
         margin: 0;
         border: none;
         background: rgba(0, 0, 0, 0.4);
@@ -839,6 +844,7 @@
         position: relative;
         display: flex;
         flex-direction: column;
+
     }
 
     .modal-image-container {
@@ -854,6 +860,7 @@
         padding: 0;
         border: none;
         overflow: hidden;
+        border-radius: 20px;
     }
 
     .modal-image {
@@ -864,7 +871,6 @@
         object-fit: cover !important;
         margin: 0;
         padding: 0;
-        border-radius: 0;
     }
 
     .modal-image.mobile {
